fix(nightmode): reduce contrast of links a bit to make them fit in better

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2460,7 +2460,7 @@ table.stats div.statsBlockInsetReadaloud {
 /* Night Mode */
 .night-mode {
 	$font-color: #bbb;
-	$link-color: #66b8ff;
+	$link-color: #7db6e8;
 	$class-main-color: #d29a38;
 	$class-sub-color: #609dd2;
 	$class-ua-color: #27ce80;
